--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@ a {
     text-decoration: none;
 }
 
+a:hover,
+a:focus {
+    color: #404BBF;
+}
                                                   /* HEDER */
 
 .header-logo {
@@ -21,13 +25,14 @@ a {
         letter-spacing: 0.03em;
         text-transform: uppercase;
 }
+
 .header-logo-web {
 color: #4D5AE5;
 }
  
 
 .header-menu-list {
-
+color: #4D5AE5;
 }
 
 .header-menu-item {
@@ -43,13 +48,17 @@ color: #2E2F42;
 }
 
 .header-address-item {
-color: #434455;
+
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
 
+.header-address-item:hover,
+.header-address-item:focus {
+    color: #404BBF;
+}
                                               /* SECTION 1 */
 
 .intro {
@@ -60,7 +69,6 @@ color: #434455;
     color: #FFF;
         text-align: center;
         font-size: 56px;
-        font-weight: 700;
         line-height: 1.07;
         letter-spacing: 0.02em;
 }
@@ -73,6 +81,13 @@ color: #434455;
         line-height: 1.5;
         letter-spacing: 0.04em;
 }
+
+.intro-button:hover,
+.intro-button:focus {
+    background-color: #404BBF;
+    cursor: pointer;
+}
+
 
                                               /* SECTION 2 */
 
@@ -106,14 +121,15 @@ color: #434455;
 .feature-item-text {
     color: #434455;
         font-size: 16px;
-        font-weight: 400;
         line-height: 1.5;
         letter-spacing: 0.02em;
 }
 
                                              /* SECTION 3 */
 
-.team {}
+}
+
+                                             /* SECTION 3 */
 
 .team-title {
     color: #2E2F42;
@@ -127,6 +143,7 @@ color: #434455;
 .team-list {}
 
 .team-item {
+
 }
 
 .team-image {
@@ -147,7 +164,6 @@ color: #434455;
     color: #434455;
         text-align: center;
         font-size: 16px;
-        font-weight: 400;
         line-height: 1.5;
         letter-spacing: 0.02em;
 }
@@ -187,7 +203,6 @@ color: #434455;
 .container-text {
     color: #434455);
         font-size: 16px;
-        font-weight: 400;
         line-height: 1.5;
         letter-spacing: 0.02em;
 }
@@ -214,7 +229,6 @@ color: #F4F4FD;
 .footer-text {
     color: #F4F4FD;
         font-size: 16px;
-        font-weight: 400;
         line-height: 1.5;
         letter-spacing: 0.02em;
 }
