--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body {
     font-family: "Roboto", sans-serif;
+    color: #2E2F42;
+    background-color: #FFFFFF;
 }
 
 ul {
@@ -17,8 +19,8 @@ a:focus {
                                                   /* HEDER */
 
 .header-logo {
-    color: #2E2F42;
-        font-family: Raleway;
+    color: #4D5AE5;
+        font-family: "Raleway", sans-serif;
         font-size: 18px;
         font-weight: 700;
         line-height: 1.17;
@@ -26,16 +28,24 @@ a:focus {
         text-transform: uppercase;
 }
 
-.header-logo-web {
-color: #4D5AE5;
+.header-logo:hover,
+.header-logo:focus {
+    color: #404BBF;
 }
- 
+
+.header-logo-studio {
+    color: #2e2f42;
+}
 
 .header-menu-list {
 color: #4D5AE5;
 }
 
 .header-menu-item {
+
+}
+
+.header-menu-link {
 color: #2E2F42;
     font-size: 16px;
     font-weight: 500;
@@ -44,19 +54,22 @@ color: #2E2F42;
 }
 
 .header-address-list {
-
+font-style: normal;
 }
 
 .header-address-item {
+}
 
+.header-address-link {
+ color: #434455;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
 
-.header-address-item:hover,
-.header-address-item:focus {
+.header-address-link:hover,
+.header-address-link:focus {
     color: #404BBF;
 }
                                               /* SECTION 1 */
@@ -80,6 +93,7 @@ color: #2E2F42;
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.04em;
+        background-color: #4D5AE5
 }
 
 .intro-button:hover,
@@ -126,10 +140,9 @@ color: #2E2F42;
 }
 
                                              /* SECTION 3 */
-
+.team {
+    background-color: #F4F4FD
 }
-
-                                             /* SECTION 3 */
 
 .team-title {
     color: #2E2F42;
@@ -140,7 +153,9 @@ color: #2E2F42;
         text-transform: capitalize;
 }
 
-.team-list {}
+.team-list {
+    background-color: #FFFFFF;
+}
 
 .team-item {
 
@@ -201,7 +216,7 @@ color: #2E2F42;
 }
 
 .container-text {
-    color: #434455);
+    color: #434455;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
@@ -214,16 +229,17 @@ background-color: #2E2F42;
 }
 
 .footer-logo {
-color: #F4F4FD;
-    font-family: Raleway;
+color: #4d5ae5;
+    font-family: "Raleway",sans-serif;
+    font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 
-.footer-logo-web {
-    color: #4D5AE5;
+.footer-logo-studio {
+color: #F4F4FD;
 }
 
 .footer-text {
